--- a/main.css
+++ b/main.css
@@ -80,17 +80,13 @@ header button {
 section {
   margin-top: 6em;
   width: 100%;
+  height: auto;
   display: flex;
   flex-direction: row;
   flex-grow: 1;
   flex-wrap: wrap;
   justify-content: center;
   overflow: hidden;
-}
-
-section h1 {
-  margin-top: 250px;
-  color: #353333;
 }
 
 figure {
@@ -130,7 +126,6 @@ footer {
   width: 100%;
   height: 50px;
   background-color: #353333;
-  margin-top: 100px;
 }
 
 footer p {
